Bug 142942 - KDE: Checkboxes in Autocorrect option dialog look badly
Summary: KDE: Checkboxes in Autocorrect option dialog look badly
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.1.0.2 rc
Hardware: All Linux (All)
: medium normal
Assignee: Michael Weghorn
URL:
Whiteboard: target:7.6.0 target:7.5.2
Keywords: bibisected, bisected, regression
: 144628 145667 (view as bug list)
Depends on:
Blocks: KDE, KF5
  Show dependency treegraph
 
Reported: 2021-06-19 14:29 UTC by Roman Kuznetsov
Modified: 2023-03-02 09:17 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot showing the issue (74.03 KB, image/png)
2021-06-23 08:35 UTC, Michael Weghorn
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Roman Kuznetsov 2021-06-19 14:29:53 UTC
Description:
KDE: Checkboxes in Autocorrect option dialog looks badly

Steps to Reproduce:
1. OPen Writer
2. Select Tools->AutoCorrect->AutoCorrect options, Options tab
3. Look at the checkboxes (see attach too)

Actual Results:
checkboxes look badly

Expected Results:
checkboxes look normal


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.1.0.2 / LibreOffice Community
Build ID: 53d68d29d90fd16448721a60aad68c28ff0809f5
CPU threads: 4; OS: Linux 5.5; UI render: default; VCL: kf5
Locale: ru-RU (ru_RU.UTF-8); UI: en-US
Calc: threaded

but not in 7.0 => regression
Comment 1 Roman Kuznetsov 2021-06-19 14:30:52 UTC
repro in

Version: 7.2.0.0.alpha1+ / LibreOffice Community
Build ID: 128f67e0efa02294205a1abe1be874557ecdcecd
CPU threads: 4; OS: Linux 5.5; UI render: default; VCL: kf5 (cairo+xcb)
Locale: ru-RU (ru_RU.UTF-8); UI: en-US
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2021-05-19_06:21:05
Calc: threaded

too
Comment 2 Michael Weghorn 2021-06-23 08:35:23 UTC
Reproduced with

Version: 7.3.0.0.alpha0+ / LibreOffice Community
Build ID: 949658028e722e5d2657b503eb20e16e41dbd8cf
CPU threads: 12; OS: Linux 5.10; UI render: default; VCL: kf5 (cairo+wayland)
Locale: en-GB (en_GB.UTF-8); UI: en-US
Calc: threaded

while it looks OK with Debian-provided

Version: 7.0.4.2
Build ID: 00(Build:2)
CPU threads: 12; OS: Linux 5.10; UI render: default; VCL: kf5
Locale: en-GB (en_GB.UTF-8); UI: en-GB
Debian package version: 1:7.0.4-4
Calc: threaded

-> looks like a regression
Comment 3 Michael Weghorn 2021-06-23 08:35:46 UTC
Created attachment 173099 [details]
Screenshot showing the issue
Comment 4 Michael Weghorn 2021-06-23 08:52:01 UTC
Bibisected to:

commit 714b2b617e9baef02510c482c6fd028e6e72acd8
Author: Caolán McNamara <caolanm@redhat.com>
Date:   Tue Jun 30 15:03:31 2020 +0100

    tdf#134270 rearrange so we know the final treeview width
    
    so we can unconditionally use the treeview width as the optimized
    pre-calculated row width hint and then fix up the gen fixed column
    settings to take account of the auto CHK_BTN mode


Adding CC: to Caolán McNamara

but it might well be that this just exposes some underlying issue in the qt5/kf5 VCL plugin.
Comment 5 Buovjaga 2021-09-29 12:31:42 UTC
*** Bug 144628 has been marked as a duplicate of this bug. ***
Comment 6 Michael Weghorn 2021-11-15 09:56:48 UTC
*** Bug 145667 has been marked as a duplicate of this bug. ***
Comment 7 Michael Weghorn 2023-02-22 09:37:20 UTC
As mentioned in bug 145667 comment 4, odd positioning is not really kf5-specific, though it's most visible there.

Pending Gerrit change: https://gerrit.libreoffice.org/c/core/+/147454
Comment 8 Commit Notification 2023-02-22 11:01:28 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/abdb918f146ceb6ea7d310968a96cdeb6f801a8f

tdf#142942 Drop unused checkbox col in sw AutoCorrect opts dialog

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2023-03-02 09:17:50 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/7eacbe2c6d1b304aadc80159296e542c7bb91cf8

tdf#142942 Drop unused checkbox col in sw AutoCorrect opts dialog

It will be available in 7.5.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.